--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skaičiavimai</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="bootstrap.min.css" rel="stylesheet" >
+    <link href="style.css" rel="stylesheet" >
+    <script src="front.js"></script>
 </head>
 <body>
+    
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -16,8 +19,13 @@
                         <form method='POST' action='calculate'>
                             <input class="form-control" type='text' name='x'><br>
                             <input class="form-control" type='text' name='y'><br>
+                            
                             <button type='submit' class="btn btn-success">Sandauga</button>
                         </form>
+                        <hr>
+                        <div class="text-align: center">
+                        <img src="paveikslas.jpg" style="width: 100px;">
+                        </div>
                     </div>
                 </div>
             </div>
